# db_lookup

./: .gitignore  Makefile  README.md  csv_to_sql.py  directory_structure.txt  pyproject.toml  pyproject.toml_unix
src/chatdb/: __init__.py  __main__.py  agent.py  cli.py  database.py  deps.py  llm.py  models.py  tools.py
src/chatdb/cli/: args.py  run.py  special_commands.py
src/dbdex/: __main__.py  agent.py  deps.py  llm.py  tools.py
src/dbdex/cli/: args.py  run.py  special_commands.py
tests/: test_basic.py  test_database.py
