[project]
name = "chatdb"
version = "0.1.0"
description = "Use AI to query your database"
authors = [
    {name = "Finn Andersen", email = "finn@example.com"},
]
requires-python = ">=3.10"

dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-ai[logfire]>=0.0.18",
    "gnureadline>=8.2.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.9.0",
    "mypy>=1.8.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
]
mysql = [
    "pymysql>=1.0.0",
    "cryptography>=41.0.0",
]
oracle = [
    "cx_Oracle>=8.3.0",
]
mssql = [
    "pyodbc>=4.0.39",
]
all = [
    "chatdb[postgres, mysql, oracle, mssql]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.pytest.ini_options]
addopts = "-ra -q --cov"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true 